--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 # data storage
-spring.datasource.url = jdbc:postgresql://localhost:5432/pma-springbootdb
-spring.datasource.username=postgres
-spring.datasource.password=123
-
+spring.datasource.url=${jdbcurl}
+# jdbc:postgresql://localhost:5432/pma-springbootdb
+spring.datasource.username=${dbuser}
+#postgres
+spring.datasource.password=${dbpass}
+#123
 # data.sql will not run
 spring.datasource.initialization-mode=never
 
@@ -12,4 +14,4 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
-version=3.0.0
+version=${pma_version}
