--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,5 +4,5 @@ spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
 
 # temporary data storage
-spring.datasource.url = jdbc:h2:mem:testdb
+jdbc.url=jdbc:h2:mem:testdb;MODE=PostgreSQL;DB_CLOSE_DELAY=-1
 version=3.3.3
