--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
 version=${pma_version}
+# temporary:
+# server.port=8081
