added property files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,2 @@
-# data storage
-spring.datasource.url=${jdbcurl}
-# jdbc:postgresql://localhost:5432/pma-springbootdb
-spring.datasource.username=${dbuser}
-#postgres
-spring.datasource.password=${dbpass}
-#123
-# data.sql will not run
-spring.datasource.initialization-mode=never
-
-spring.jpa.hibernate.ddl-auto=none
-
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-spring.jpa.show-sql=true
-spring.thymeleaf.cache=false
-version=${pma_version}
-# temporary:
-# server.port=8081
+spring.profiles.active=dev
+server.error.whitelabel.enabled=false
