custom client-side validation

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -23,3 +23,6 @@ logging.level.com.jrp.pma=DEBUG
 logging.level.root=WARN
 logging.level.org.springframework=INFO
 logging.file=app.log
+
+# prevent validation at insertion. Only perform validation on read (on client side): 
+spring.jpa.properties.javax.persistence.validation.mode=none
